--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,7 +9,7 @@
     %link(href="/feed.rss" rel="alternate" type="application/rss+xml" title="Ana Enders Blog RSS")/
     %link(href="/stylesheets/app.css" media="screen" rel ="stylesheet" type="text/css")/
     %link(href="/stylesheets/jquery-ui.css" media="screen" rel="stylesheet" type="text/css")/
-    %link(href="/images/favicon.ico" rel ="icon" type="image/x-icon")/
+    %link(href="/images/favicon.ico" rel ="icon" type="image/x-icon")/    
     %script(src="/javascripts/jquery-1.7.2.min.js" type="text/javascript")
     %script(src="/javascripts/jquery-ui-1.8.19.min.js" type="text/javascript")
     %script(src="/javascripts/underscore-1.3.1.min.js" type="text/javascript")
@@ -17,8 +17,9 @@
     %script(src="/javascripts/application.js" type="text/javascript")
     %script(src="/javascripts/dialog.js" type="text/javascript")
     %script(src="/javascripts/slides.min.jquery.js" type="text/javascript")
+    
     / [if lt IE 9]
-      %script(src="/javascripts/html5shiv.js" type="text/javascript")
+      %script(src="/javascripts/html5shiv.js" type="text/javascript")/
     :javascript
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-10030932-1']);
@@ -29,6 +30,15 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
+    
+    /[if IE]
+      :css
+        .content header, .prev_container, .next_container {
+          background:transparent;
+          filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#80ffffff,endColorstr=#80ffffff);
+          zoom: 1;
+        }
+      </style>
     
   %body
     .content
