--- a/views/index.haml
+++ b/views/index.haml
@@ -254,7 +254,8 @@
         %p 
           For our wedding, 
           %a(href="http://ianenders.com/" target="_blank")
-            Ian (my husband) and I put together this super simple site, which listed our wedding details and allowed our guests to RSVP, pick their meals, and leave comments regarding food considerations. Ian wired up the database, while I designed and implemented the UI.
+            Ian (my husband) 
+          and I put together this super simple site, which listed our wedding details and allowed our guests to RSVP, pick their meals, and leave comments regarding food considerations. Ian wired up the database, while I designed and implemented the UI.
 
 #scully     
   .detail-container
