--- a/views/about.haml
+++ b/views/about.haml
@@ -289,6 +289,6 @@
           %td
             %a.twitter{:target => 'blank'}(href="https://twitter.com/#!/anaenders")
           %td
-            %a.github{:target => 'blank'}(href="https://github.com/anacarter")
+            %a.github{:target => 'blank'}(href="https://github.com/anaenders")
             
 .clear
