--- a/views/about.haml
+++ b/views/about.haml
@@ -50,9 +50,11 @@
     %p
       Hello and thank you for visiting my website!! I am a web developer based in San Francisco and New York City. I am both nerd and designer at heart. I spend most of my time coding up user interfaces and handing off compliant and pixel-perfect views for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them, and sometimes I do logos and branding work that require no coding. Whatever the case is, the goal is to create an awesome web experience.
     %p
-      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog; both incredibly adorable. I love interior design, modern and vintage furniture, playing oboe, the French language, and cooking. I studied music performance at Carnegie Mellon University, then took up wood working, then began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done. 
+      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog; both incredibly adorable. I love interior design, modern and vintage furniture, playing oboe, the French language, and making delicious home cooked meals. I studied music performance at Carnegie Mellon University, then took up wood working, then began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done. 
     %p
-      Please feel free to glance at my portfolio and do not hesitate to 
+      Please feel free to glance at 
+      %a(href="/")my portfolio 
+      and do not hesitate to 
       %a(href="mailto:ana.enders@gmail.com")contact me
       with any feedback or questions.
     %p
@@ -207,8 +209,8 @@
                         %a(href="http://companies.thedailymuse.com/" target="_blank")
                           Company Muse
                         &#47;
-                        %a(href="http://www.thedailymuse.com/" target="_blank")
-                          The Daily Muse
+                        %a(href="http://www.themuse.com/" target="_blank")
+                          The Muse
                         
                     %td.date 
                       San Francisco, CA
@@ -260,7 +262,7 @@
                       %br/
                       (1 year 1 month)	
                   %tr 
-                    %td As the frontend engineer, I design and implement features for The Daily Muse and collaborate with the backend engineer focusing primarily on The Company Muse job board.
+                    %td As the frontend engineer, I design and implement features for The Daily Muse and collaborate with the backend engineer focusing primarily on The Company Muse job board and the parent site, The Muse.
                     %td Freelancing for old clients in need of frontend adjustments to their existing sites.
                     %td As a member of the development team, I worked closely with the designers, backend programmers, and software engineers in producing custom sites and content management software.
                     %td In addition to being a photo shoot and set design assistant, I worked on image post-production editing, logo design, graphic design, web design and web development using Photoshop, HTML, CSS and Flash.
@@ -290,5 +292,7 @@
             %a.twitter{:target => 'blank'}(href="https://twitter.com/#!/anaenders")
           %td
             %a.github{:target => 'blank'}(href="https://github.com/anaenders")
+          %td
+            %a.instagram{:target => 'blank'}(href="http://www.gramfeed.com/anaenders")
             
 .clear
