--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -606,7 +606,12 @@ img { border: 0px }
               width: 58px;
               height: 58px;
               float: left;
-              -webkit-box-reflect: below 0px -webkit-gradient( linear, left top, left bottom, color-stop(0.0, rgba(255, 255, 255, 0.0)), color-stop(0.6, rgba(255,255,255,0.3)), color-stop(0.9, rgba(255, 255, 255, 0.7)));
+              -webkit-box-reflect: below 0px -webkit-gradient( linear, 
+                left top, 
+                left bottom, 
+                color-stop(0.0, rgba(255, 255, 255, 0.0)), 
+                color-stop(0.6, rgba(255,255,255,0.3)), 
+                color-stop(0.9, rgba(255, 255, 255, 0.7)));
               &.email { @include button('/images/about/btns/email.jpg') }
               &.google { @include button('/images/about/btns/google.jpg') }
               &.rss { @include button('/images/about/btns/rss.jpg') }
@@ -615,6 +620,7 @@ img { border: 0px }
               &.facebook { @include button('/images/about/btns/facebook.jpg') }
               &.twitter { @include button('/images/about/btns/twitter.jpg') }
               &.github { @include button('/images/about/btns/github.jpg') }
+              &.instagram { @include button('/images/about/btns/instagram.jpg') }
             }
           }
         }
