about copy edit

--- a/views/about.haml
+++ b/views/about.haml
@@ -50,7 +50,7 @@
     %p
       Hello and thank you for visiting my website!! I am a web developer based in San Francisco and New York City. I am both nerd and designer at heart. I spend most of my time coding up user interfaces and handing off compliant and pixel-perfect views for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them, and sometimes I do logos and branding work that require no coding. Whatever the case is, the goal is to create an awesome web experience.
     %p
-      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog; both incredibly adorable. I love interior design, modern and vintage furniture, playing oboe, the French language, and making delicious home cooked meals. I studied music performance at Carnegie Mellon University, then took up wood working, then began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done. 
+      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog; both incredibly adorable. I love interior design, modern and vintage furniture, the French language, and making delicious home cooked meals. I studied music performance at Carnegie Mellon University, then took up wood working, then began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done. 
     %p
       Please feel free to glance at 
       %a(href="/")my portfolio 
