new blog, coffeescript, updated portfolio

--- a/views/blog.haml
+++ b/views/blog.haml
@@ -11,11 +11,10 @@
 %nav
   .off
     %a(href="/")
-      %img.btn(src="/images/navigation/portfolio.jpg" alt="portfolio")/
-  .off
-    %a(href="/about")
       %img.btn(src="/images/navigation/about.jpg" alt="about")/
-
+  .off
+    %a(href="/portfolio")
+      %img.btn(src="/images/navigation/portfolio.jpg" alt="portfolio")/
   .on
     %a(href="/blog")
       %img.btn(src="/images/navigation/blog.jpg" alt="blog")/
