--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -104,15 +104,49 @@ $aqua: #59edd3;
 }
 
 @font-face {
-  font-family: Archer-Book;
-  src: url('/fonts/Archer-Book-Pro.otf');
-  src: local('Archer-Book'), url('/fonts/Archer-Book-Pro.otf') format('opentype'); 
+		font-family: 'Trade-Gothic';
+		src: url('/fonts/tradegothicltstdcn18.eot');
+		src: url('/fonts/tradegothicltstdcn18.eot?#iefix') format('embedded-opentype'),
+				 url('/fonts/tradegothicltstdcn18.woff') format('woff'),
+				 url('/fonts/tradegothicltstdcn18.ttf') format('truetype'),
+				 url('/fonts/tradegothicltstdcn18.svg#tradegothicltstdcn18') format('svg');
+		font-weight: normal;
+		font-style: normal;
 }
 
 @font-face {
-  font-family: Trade-Gothic;
-  src: url("/fonts/TradeGothicLTStd-Cn18.otf");
-  src: local('Trade-Gothic'), url('/fonts/TradeGothicLTStd-Cn18.otf') format('opentype');
+		font-family: 'Archer-LightItalic';
+		src: url('/fonts/archerlightitalpro.eot');
+		src: url('/fonts/archerlightitalpro.eot?#iefix') format('embedded-opentype'),
+				 url('/fonts/archerlightitalpro.woff') format('woff'),
+				 url('/fonts/archerlightitalpro.ttf') format('truetype'),
+				 url('/fonts/archerlightitalpro.svg#archerlightitalpro') format('svg');
+		font-weight: normal;
+		font-style: normal;
+}
+
+@font-face {
+		font-family: 'Archer-Book';
+		src: url('/fonts/archerbookpro.eot');
+		src: url('/fonts/archerbookpro.eot?#iefix') format('embedded-opentype'),
+				 url('/fonts/archerbookpro.woff') format('woff'),
+				 url('/fonts/archerbookpro.ttf') format('truetype'),
+				 url('/fonts/archerbookpro.svg#archerbookpro') format('svg');
+		font-weight: normal;
+		font-style: normal;
+		text-rendering:  optimizeLegibility;
+}
+
+@font-face {
+    font-family: 'ProximaLight';
+    src: url('/fonts/proximanova-light-webfont.eot');
+    src: url('/fonts/proximanova-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/proximanova-light-webfont.woff') format('woff'),
+         url('/fonts/proximanova-light-webfont.ttf') format('truetype'),
+         url('/fonts/proximanova-light-webfont.svg#proxima_nova_ltregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    text-rendering:  optimizeLegibility;
 }
 
 ::selection { background-color:#fce7e7; }
@@ -297,7 +331,7 @@ img { border: 0px }
       margin: 0 0 15px 0;
       float: left;
       width: 100%;
-      font-family: Helvetica;
+      font-family: 'ProximaLight';
       opacity: 0.8;
       filter: alpha(opacity=80); /* For IE8 and earlier */
       span { 
@@ -311,15 +345,20 @@ img { border: 0px }
         font-family: "Trade-Gothic", Helvetica;
       }
       p { 
-        font-size: 12px; 
+        font-size: 14px; 
         clear: both; 
         display: block;
         margin: 15px 0 0 0; 
         float: left; 
         padding: 0px;
-        color: #454545;
+        color: #000;
         line-height: 1.6em;
         // @include columns(2, 10px);
+        a { 
+          color: #F65F5F;
+          font-weight: normal;
+          &:hover { text-decoration: none; color: #bc3b3b }
+        }
       }
     }
   }
@@ -353,7 +392,7 @@ img { border: 0px }
       }
       .pagination {
       	margin:20px auto 0;
-      	width:250px;
+      	width:290px;
       	li {
         	float:left;
         	margin:0 1px;
@@ -379,16 +418,25 @@ img { border: 0px }
     font-size: 13px;
     float: left;
     padding: 0 10px 10px 0;
-    p:first-child {
-      &:first-letter {
-        font-size: 20px;
+    p {
+      span {
+        float: left;
+        margin: 26px 20px 20px 0;
+        font-size: 66px;
+        font-family: "Archer-LightItalic";
+        // letter-spacing: -3px;
+        text-shadow: -2px 0px 5px #b5b5b5;
+      }
+      &.thanks {
+        font-family: "Archer-LightItalic";
+        font-size: 15px;
       }
     }
   }
   .twitter-feed {
     @include bring_to_front;
     width: 530px;
-    height: 330px;
+    height: 368px;
     float: left;  
     overflow-y: scroll;
     .tweet {
@@ -492,7 +540,7 @@ img { border: 0px }
           float: left;
           margin-top: 25px;
           padding-right: 15px;
-          &.frontend { width: 315px; td { width: 16% } }
+          &.frontend { width: 315px; td { width: 14% } }
           &.programming { width: 270px; td { width: 25% }}
           &.design { width: 193px; td { width: 33% } }
           &.additional { width: 162px; td { width: 50% } }
