--- a/views/index.haml
+++ b/views/index.haml
@@ -56,7 +56,7 @@
     %p
       %span
         Hello
-      and thank you for visiting my website!! I am a web developer based in San Francisco and New York City. I am both nerd and designer at heart. I spend most of my time coding up user interfaces and handing off compliant and pixel-perfect views for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them, and sometimes I do logos and branding work that require no coding. Whatever the case is, the goal is to create an awesome web experience.
+      and thank you for visiting my website!! I am a web developer based in New York City. I am both nerd and designer at heart. I spend most of my time coding up user interfaces and handing off compliant and pixel-perfect views for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them, and sometimes I do logos and branding work that require no coding. Whatever the case is, the goal is to create an awesome web experience.
     %p
       Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog; both incredibly adorable. I love interior design, modern and vintage furniture, the French language, and making delicious home cooked meals. I studied music performance at Carnegie Mellon University, then took up wood working, then began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done. 
     %p
@@ -70,10 +70,8 @@
       
   .twitter-feed
 
-  %script(type="text/template" id="tweet-template")
-    .tweet
-      <%= text %>
-      %span <%= time %> from <%= from %>
+    %a.twitter-timeline(href="https://twitter.com/anaenders" data-widget-id="361647706579550210")Tweets by @anaenders
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
   .resume
     %h1 Frontend Developer
@@ -304,6 +302,6 @@
           %td
             %a.github{:target => 'blank'}(href="https://github.com/anaenders")
           %td
-            %a.instagram{:target => 'blank'}(href="http://www.gramfeed.com/anaenders")
+            %a.instagram{:target => 'blank'}(href="http://instagram.com/anaenders")
             
 .clear
