New header, new slideshow altered copy, new navigation.

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,70 +1,37 @@
-%nav
-  .on
-    %a(href="/")
-      %img.btn(src="/images/navigation/about.jpg" alt="about")/
-  .off
-    %a(href="/portfolio")
-      %img.btn(src="/images/navigation/portfolio.jpg" alt="portfolio")/
-  .off
-    %a(href="/blog")
-      %img.btn(src="/images/navigation/blog.jpg" alt="blog")/
-      
+.slideshow
+  %img(src="/images/about/slide1.jpg")/
+  %img(src="/images/about/slide2.jpg")/
+  %img(src="/images/about/slide3.jpg")/
+  %img(src="/images/about/slide4.jpg")/
+  %img(src="/images/about/slide5.jpg")/
+  %img(src="/images/about/slide6.jpg")/
+  %img(src="/images/about/slide7.jpg")/
+  %img(src="/images/about/slide8.jpg")/
+  %img(src="/images/about/slide9.jpg")/
+  %img(src="/images/about/slide10.jpg")/
+  %img(src="/images/about/slide11.jpg")/
+  %img(src="/images/about/slide12.jpg")/
+  %img(src="/images/about/slide13.jpg")/
+  %img(src="/images/about/slide14.jpg")/
+  %img(src="/images/about/slide15.jpg")/
+  %img(src="/images/about/slide16.jpg")/
+  %img(src="/images/about/slide17.jpg")/
+  %img(src="/images/about/slide18.jpg")/
+  %img(src="/images/about/slide19.jpg")/
+
 .about
-  .slideshow
-    #slides 
-      .slides_container
-        %div 
-          %img(src="/images/about/slide1.jpg" alt="slide1")/
-        %div
-          %img(src="/images/about/slide2.jpg" alt="slide2")
-        %div
-          %img(src="/images/about/slide3.jpg" alt="slide3")          
-        %div
-          %img(src="/images/about/slide4.jpg" alt="slide4")/
-        %div
-          %img(src="/images/about/slide5.jpg" alt="slide5")
-        %div
-          %img(src="/images/about/slide6.jpg" alt="slide6")
-        %div
-          %img(src="/images/about/slide7.jpg" alt="slide7")
-        %div
-          %img(src="/images/about/slide8.jpg" alt="slide8")
-        %div
-          %img(src="/images/about/slide9.jpg" alt="slide9")
-        %div
-          %img(src="/images/about/slide10.jpg" alt="slide10")
-        %div
-          %img(src="/images/about/slide11.jpg" alt="slide11")
-        %div
-          %img(src="/images/about/slide12.jpg" alt="slide12")
-        %div
-          %img(src="/images/about/slide13.jpg" alt="slide13")
-        %div
-          %img(src="/images/about/slide14.jpg" alt="slide14")
-        %div
-          %img(src="/images/about/slide15.jpg" alt="slide15")
-        %div
-          %img(src="/images/about/slide16.jpg" alt="slide16")
-        %div
-          %img(src="/images/about/slide17.jpg" alt="slide17")
-        %div
-          %img(src="/images/about/slide18.jpg" alt="slide18")
-        %div
-          %img(src="/images/about/slide19.jpg" alt="slide19")
-    
   .casual-intro
     %p
       %span
         Hello
-      and thank you for visiting my website!! I am a web developer based in New York City. I am both nerd and designer at heart. I spend most of my time coding up user interfaces and handing off compliant and pixel-perfect views for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them, and sometimes I do logos and branding work that require no coding. Whatever the case is, the goal is to create an awesome web experience.
+      hello, and thank you for visiting!! I am a web developer based in New York City. I am both nerd and designer at heart. I spend most of my time coding up user interfaces and handing off compliant and pixel-perfect views for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them, and sometimes I do logos and branding work that require no coding. Whatever the case is, the goal is to create an awesome web experience.
     %p
       Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog; both incredibly adorable. I love interior design, modern and vintage furniture, the French language, and making delicious home cooked meals. I studied music performance at Carnegie Mellon University, then took up wood working, then began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done. 
     %p
-      Please feel free to glance at 
+      Have a look at 
       %a(href="/")my portfolio 
-      and do not hesitate to 
-      %a(href="mailto:ana.enders@gmail.com")contact me
-      with any feedback or questions.
+      and let me know
+      %a(href="mailto:ana.enders@gmail.com") what you think!
     %p.thanks
       &#45; Thank You!!
       
@@ -303,4 +270,4 @@
           %td
             %a.instagram{:target => 'blank'}(href="http://instagram.com/anaenders")
             
-.clear
+  .clear
