Slideshow and nav cleanup and fully functional.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -46,11 +46,11 @@
           %img(src="/images/logo.png")/   
         .dots
           %nav
-            %a.on(href="/")
+            %a{:href => '/'}
               %img.btn(src="/images/navigation/about.jpg" alt="about")/
-            %a.off(href="/portfolio")
+            %a{:href => '/portfolio'}
               %img.btn(src="/images/navigation/portfolio.jpg" alt="portfolio")/
-            %a.off(href="/blog")
+            %a{:href => '/blog'}
               %img.btn(src="/images/navigation/blog.jpg" alt="blog")/  
           %a(href="/")
             ana enders
